# cvalid

./: Cargo.toml  GUIDE.md  INSTALLATION.md  README.md  cross1.xlsx  cross2.xlsx  text1.xlsx
src/: args.rs  features.rs  lib.rs  main.rs
src/gui/: mod.rs  output.rs  search.rs
