[package]
name = "cvalid"
version = "0.2.0"
edition = "2021"
authors = ["Zi Hao L."]
description = "Workbook Data Integrity Check."
readme = "README.md"
homepage = "https://github.com/CarbonFlora/cvalid"
repository = "https://github.com/CarbonFlora/cvalid"
keywords = ["cli", "search", "excel"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
calamine = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
iced = "0.9.0"
native-dialog = { version = "0.6.4", features = ["windows_dpi_awareness", "windows_visual_styles"] }
once_cell = "1.18.0"
